# bluefaker_factory

./: .gitignore  Makefile  README.md  blue_fk_data_gen.py  bluefaker.py  mytestdata.parquet  pyproject.toml  requirements.txt  test_schema.yml
examples/notebooks/: Examples.ipynb  Fake_Fraud_Data.ipynb  Fake_Fraude_Data.ipynb  Untitled.ipynb  iceburge_tables.ipynb
examples/sql_fraud/: fraud_report.sql
logic_modules/: churn.py  fraud.py  risk.py  vip.py
schema_utils/: iceberg_schema_mapper.py
schemas/: churn_schema.yml  fraud_schema.yaml  ml_schema.yml  ml_schema_test.yml  support_ticket_schema.yaml  transaction_schema.yaml
scripts/: create_fake_churn_data.sh  create_fake_fraud_data.sh  create_mldata_1.sh  set_up.sh
